--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         </div>
     </section>
     <div class="main__wrapper">
-        <section class="goods">
+        <section class="goods" id="goods">
             <div class="goods__container container">
                 <h2 class="goods__title title title_center title_color-dark title_h2">Виды летних кафе</h2>
                 <div class="goods__grid row wrap d-flex">
@@ -100,39 +100,39 @@
                 </div>
             </div>
         </section>
-        <section class="features">
+        <section class="features" id="features">
             <div class="features__container container">
                 <h2 class="features__title title title_center title_color-dark title_h2">Почему мы</h2>
                 <div class="features__grid d-flex">
                     <div class="features__item">
                         <img src="img/sketch.svg" alt="" class="features__image">
-                        <p class="features__text">Эскиз проекта при первой встрече</p>
+                        <p class="features__text">Эскиз проекта<br> при первой встрече</p>
                     </div>
                     <div class="features__item">
-                        <img src="img/sketch.svg" alt="" class="features__image">
-                        <p class="features__text">Современные решения и технологии</p>
+                        <img src="img/market.svg" alt="" class="features__image">
+                        <p class="features__text">Современные решения<br> и технологии</p>
                     </div>
                     <div class="features__item">
-                        <img src="img/sketch.svg" alt="" class="features__image">
+                        <img src="img/cafe.svg" alt="" class="features__image">
                         <p class="features__text">Летнее кафе "ПОД КЛЮЧ"</p>
                     </div>
                     <div class="features__item">
-                        <img src="img/sketch.svg" alt="" class="features__image">
+                        <img src="img/idea.svg" alt="" class="features__image">
                         <p class="features__text">“Умные” конструкции</p>
                     </div>
                     <div class="features__item">
-                        <img src="img/sketch.svg" alt="" class="features__image">
-                        <p class="features__text">Спроектировали
-                            и построили
+                        <img src="img/review.svg" alt="" class="features__image">
+                        <p class="features__text">Спроектировали<br>
+                            и построили<br>
                             больше 100 объектов</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="work">
+        <section class="work" id="work">
             <div class="work__container container">
                 <h2 class="work__title title title_hidden">Наши работы</h2>
-                <div class="work__grid row wrap d-flex">
+                <div class="work__grid row d-flex">
                     <div class="work__col d-flex">
                         <div class="work__column col">
                             <a href="#" class="work__item">
@@ -234,7 +234,7 @@
             </div>
         </section>
     </div>
-    <section class="services">
+    <section class="services" id="services">
         <div class="services__container container">
             <h2 class="services__title title title_center title_color-white">Услуги</h2>
             <div class="services__grid wrap row d-flex">
@@ -269,7 +269,7 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section class="reviews" id="reviews">
         <div class="reviews__container container">
             <h2 class="reviews__title title title_h2 title_center title_color-dark">Отзывы о нашей работе</h2>
             <div class="reviews__carousel owl-carousel">
@@ -396,7 +396,7 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="about__container container">
             <h2 class="about__title title title_h2 title_color-dark">О нас</h2>
             <div class="about__top">
@@ -440,7 +440,7 @@
                         </div>
                     </div>
                     <picture class="feature__pic">
-                        <img src="img/feature__img.png" alt="" class="feature__img">
+                        <img src="img/feature__img_2.jpg" alt="" class="feature__img">
                     </picture>
                 </div>
             </div>
